# tunum-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  go.mod  go.sum  main.go
assets/css/: style.css
assets/js/: style.js
docs/: index.html  ref.html
docs/assets/js/: pagepath.js  scroll.js  toggle.js
docs/layout/: _breadcrumbs.html  _footer.html  _header.html  _sidebar.html
docs/ref/: fmpint.html
docs/ref/fmpint/: literals.html
include/: tunum.hpp
include/tunum/: bit.hpp  concepts.hpp  floating.hpp  fmpint.hpp  math.hpp  mp.hpp  number_array.hpp  numerical_calc.hpp  submodule_loader.hpp  uint_base_number.hpp  utility.hpp
include/tunum/floating/: add.hpp  bit_info.hpp  deduction_guide.hpp  div.hpp  fe_fn.hpp  fe_holder.hpp  kind.hpp  mul.hpp  std_info.hpp  sub.hpp
include/tunum/fmpint/: alias.hpp  arithmetic.hpp  bit.hpp  core.hpp  literals.hpp  meta_function.hpp  operator.hpp
include/tunum/math/: abs.hpp  add.hpp  ceil.hpp  exp.hpp  fe_fn.hpp  fe_holder.hpp  floating.hpp  floor.hpp  fma.hpp  modf.hpp  nextafter.hpp  nexttoward.hpp  round.hpp  sqrt.hpp  trunc.hpp
include/tunum/mp/: arithmetc_operation_result.hpp  get_int.hpp  get_integral_size.hpp  get_large_integral.hpp  get_uint.hpp  integral_to_floating.hpp  is_constexpr.hpp  (+5 more)
pages/: index.md  ref.md
pages/layout/: _breadcrumbs.md  _footer.md  _header.md  _sidebar.md
pages/ref/: fmpint.md
setting/: setting.go
templates/: index.html
test/: CMakeLists.txt  bit_test.cpp  floating_test.cpp  fmpint_test.cpp  math_test.cpp  submodule_load_test.cpp  uint_base_number_test.cpp
(+5 files in other folders)
